<resources>
    <string name="app_name">Percisely</string>

    <string name="title_activity_task_add">Add a task</string>
    <string name="title_task_detail">Task details</string>
    <string name="add_record">By record</string>
    <string name="add_title">Name your task</string>
    <string name="add_photo">By photo</string>
    <string name="add_description">Description:</string>
    <string name="add_deadline">\nSet a deadline for the task:</string>
    <string name="add_cost">\nEstimated time cost:</string>
    <string name="add_save">Save</string>
    <string name="add_cancel">Cancel</string>
    <string name="add_text_hours">Hours</string>
    <string name="add_text_min">Minutes</string>
    <string name="add_bonus_moneycost">Money cost</string>
    <string name="title_activity_award_list">Award list</string>

    <string name="settings_actionbar_save">Save</string>
    <string name="award_list_timecost">\nTime cost:</string>
    <string name="settings_actionbar_cancel">Cancel</string>
    <string name="addtask_record_record">Record</string>
    <string name="addtask_record_play">Play</string>
    <string name="addtask_record_delete">Delete</string>
    <string name="addtask_record_stop">Stop</string>
    <string name="addtask_savetitle">Confirm title</string>
    <string name="addtask_warning_emptytitle">Title cannot be empty</string>
    <string name="addtask_photo_retake">Retake</string>
    <string name="addtask_sdcard_unavailable">Unable to access storage</string>
    <string name="detailtask_playrecord">Play record</string>
    <string name="detailtask_start">Let\'s get to work!</string>
    <string name="settings_text_money">Money</string>
    <string name="settings_text_time">Time</string>
    <string name="settings_text_title">Which one matters more for you?</string>
    <string name="add_award_title">Name your award</string>
    <string name="menu_currentbonus">Current bonus: </string>
    <string name="task_list_delete_prompt">Are you going to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="task_list_deletion_successful">Task deleted</string>
    <string name="task_list_delete_failed">Deleting failed</string>
    <string name="no">No</string>
    <string name="working_break_confirmation">"Are you sure you want to buy a 20 minutes break? It costs "</string>
    <string name="working_break_insufficientbonus">Insufficient bonus, get back to work</string>
    <string name="working_breakbought">Enjoy your break</string>
    <string name="working_finish_prompt">Are you sure? This can\'t be undone.</string>
    <string name="working_finish_youveearned">"You've earned "</string>
    <string name="working_finish_pointsgoodjob">" points, good job"</string>
    <string name="achievements_takingoff">Taking off</string>
    <string name="achievements_takingoff_des">Earn your first point</string>
    <string name="achievement_dreamcometrue">Dream comes true</string>
    <string name="achievement_dreamcometrue_des">Buy your first reward</string>
    <string name="achievement_questadventurer">Questing adventurer</string>
    <string name="achievement_questadventurer_des">Finished 10 tasks</string>
    <string name="award_add_duplicatedtitle">Award with same title exists</string>
    <string name="award_add_added">Award added</string>
    <string name="award_list_buy_prompt">Are you going to buy this reward?</string>
    <string name="award_list_buy_insufficient">Insufficient bonus</string>
    <string name="award_list_buy_error">Error</string>
    <string name="award_list_successful">Congratulations, just go get your rewards</string>
    <string name="settings_title">Settings</string>
    <string name="task_add_duplicatedtitle">Task with same title exists</string>
    <string name="task_add_recordlost">Record not found</string>
    <string name="task_add_added">Task added</string>
</resources>
