<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="assignment.paulay.percisely.TaskAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_title" />

        <Button
            android:id="@+id/addTaskConfirmTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addtask_savetitle" />

        <LinearLayout
            android:id="@+id/addtask_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/addings"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/addRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/add_divider"
                    android:layout_toStartOf="@+id/add_divider"
                    android:drawableTop="@drawable/add_record"
                    android:text="@string/add_record" />

                <Button
                    android:id="@+id/addPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/add_divider"
                    android:layout_toRightOf="@+id/add_divider"
                    android:drawableTop="@drawable/add_photo"
                    android:text="@string/add_photo" />

                <TextView
                    android:id="@+id/add_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <include
                android:id="@+id/addtaskRecordPanel"
                layout="@layout/add_record_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/addtaskPhotoPanel"
                layout="@layout/add_photo_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_description"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_deadline"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <TimePicker
                android:id="@+id/deadlineTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo.Light" />

            <DatePicker
                android:id="@+id/deadlineDatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Holo.Light" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_cost"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <RelativeLayout
                android:id="@+id/taskCostPickers"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/taskPickersTextHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/taskDivider2"
                    android:layout_toStartOf="@+id/taskDivider2"
                    android:text="@string/add_text_hours"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/taskDivider2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

                <NumberPicker
                    android:id="@+id/taskCostMinPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/taskDivider2"
                    android:layout_toRightOf="@+id/taskDivider2" />

                <TextView
                    android:id="@+id/taskPickersTextMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/taskCostMinPicker"
                    android:layout_toRightOf="@+id/taskCostMinPicker"
                    android:text="@string/add_text_min"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <NumberPicker
                    android:id="@+id/taskCostHourPicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/taskPickersTextHours"
                    android:layout_toStartOf="@+id/taskPickersTextHours" />

            </RelativeLayout>

            <TextView
                android:id="@+id/addTaskBonusEstimated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/taskButtonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_save" />

            <Button
                android:id="@+id/taskButtonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_cancel" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
